--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@
 
 :root{
    --primary: #F59704; 
-   --secondary:#3C096C;
+   --secondary:#230044;
    --just-white: #f8f8f8;
    --white-purple:#f6f1fa;
 
